# kazeta-plus

./: LICENSE  README.md  build-image.sh  build_info.txt  create-upgrade-kit.sh  install.sh  manifest  sha256sum.txt  upgrade-to-plus.sh
.github/workflows/: build-system-image.yml  main.yml
aur-pkgs/: downgrade-11.5.4-1-any.pkg.tar.zst  frzr-0.15.6-1-any.pkg.tar.zst  gcadapter-oc-dkms-1.4-2-any.pkg.tar.zst  pikaur-1.33.1-1-any.pkg.tar.zst  udev-media-automount-66.efca3c5-1-any.pkg.tar.zst
bios/: Cargo.toml
bios/src/: .main.rs.kate-swp  assets.rs  audio.rs  cd_player_backend.rs  components.rs  config.rs  gcc_adapter.rs  input.rs  main.rs  memory.rs  save.rs  system.rs  theme.rs  types.rs  utils.rs  video.rs
bios/src/.kazeta/var/: playtime_end  playtime_start
bios/src/backups/: main.rs  save.rs
bios/src/ui/: about.rs  bluetooth.rs  cd_player.rs  data.rs  dialog.rs  extras_menu.rs  main_menu.rs  mod.rs  runtime_downloader.rs  settings.rs  theme_downloader.rs  update_checker.rs  wifi.rs
local_packages/: dbus-1.16.2-1-x86_64.pkg.tar.zst  iwd-3.9-1-x86_64.pkg.tar.zst  libndp-1.9-1-x86_64.pkg.tar.zst  libnm-1.54.0-1-x86_64.pkg.tar.zst  linux-firmware-20250808-1-any.pkg.tar.zst  networkmanager-1.54.0-1-x86_64.pkg.tar.zst  polkit-126-2-x86_64.pkg.tar.zst  readline-8.3.001-1-x86_64.pkg.tar.zst  wpa_supplicant-2:2.11-3-x86_64.pkg.tar.zst
rootfs/etc/: makepkg.conf  mkinitcpio.conf  sudoers
rootfs/etc/keyd/: default.conf
rootfs/etc/lightdm/lightdm.conf.d/: 10-chimeraos-session.conf
rootfs/etc/pacman.d/: mirrorlist
rootfs/etc/sudoers.d/: 99-kazeta-plus
rootfs/etc/systemd/system/: kazeta-profile-loader.service  optical-mount@.service  optical-unmount@.service
rootfs/etc/udev/rules.d/: 99-optical-automount.rules
rootfs/usr/lib/frzr.d/: setcap.migration
rootfs/usr/share/inputplumber/profiles/: dpad-fix.yaml  steam-deck-dpad-fix.yaml  steam-deck.yaml
rootfs/usr/share/kazeta/runtimes/: none.kzr
rootfs/usr/share/polkit-1/rules.d/: 40-kazeta.rules  60-zero.rules
rootfs/usr/share/wayland-sessions/: kazeta.desktop  zero.desktop
