[package]
name = "kazeta-bios"
version = "0.2.0"
edition = "2021"

[dependencies]
macroquad = { version = "0.4.7", features = ["audio"] }
gilrs = "0.10.6"
futures = "0.3.30"
dirs = "5.0.1"
whoami = "1.4.1"
sysinfo = "0.30.5"
tar = "0.4.40"
walkdir = "2.4.0"

# clock
chrono = { version = "0.4", features = ["serde"] }

# for checking the splash screen setting
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# for generating a random message every time the BIOS loads
rand = "0.8"

# parsing command output for fetching audio sinks
regex = "1"

# reliably find user's home directory
home = "0.5"
